--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "less-loader": "11.1.0",
     "mini-css-extract-plugin": "^2.6.1",
     "react-refresh": "^0.14.0",
+    "react-router-dom": "^6.14.1",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "serve": "^14.0.1",
